Add Max Metric to Webreport
Max Metric is now included in Webreport DTO.
In Webreport the user can switch between between multiple metrics:
If JPlag was run with a metric other than the max metric, e.g. avg metric,
the user will be able to rank comparisons in the WebReport by the
max metric additionally,
If JPlag was run with the max metric, this is the only metric available.

--- a/jplag/src/main/resources/de/jplag/messages.properties
+++ b/jplag/src/main/resources/de/jplag/messages.properties
@@ -27,3 +27,5 @@ CommandLineArgument.ClusterPreprocessingNone=Do not use any preprocessing before
 CommandLineArgument.ClusterPreprocessingCdf=Before clustering, the value of the cumulative distribution function of all similarities is estimated. The similarities are multiplied with these estimates. This has the effect of supressing similarities that are low compared to other similarities.
 CommandLineArgument.ClusterPreprocessingPercentile=Any similarity smaller than the given percentile will be suppressed during clustering.
 CommandLineArgument.ClusterPreprocessingThreshold=Any similarity smaller than the given threshold value will be suppressed during clustering.
+SimilarityMetric.Avg.Description = Average of both program coverages. This is the default similarity which works in most cases: Matches with a high average similarity indicate that the programs work in a very similar way.
+SimilarityMetric.Max.Description = Maximum of both program coverages. This ranking is especially useful if the programs are very different in size. This can happen when dead code was inserted to disguise the origin of the plagiarized program.
