--- a/jplag/src/main/resources/de/jplag/messages_es.properties
+++ b/jplag/src/main/resources/de/jplag/messages_es.properties
@@ -57,3 +57,6 @@ AllMatches.Distribution=Distribución
 AllMatches.Length=Longitud
 AllMatches.Number_of_matches=No de coincidencias
 AllMatches.Basecode=Código Base
+
+SimilarityMetric.Avg.Description = Average of both program coverages. This is the default similarity which works in most cases: Matches with a high average similarity indicate that the programs work in a very similar way.
+SimilarityMetric.Max.Description = Maximum of both program coverages. This ranking is especially useful if the programs are very different in size. This can happen when dead code was inserted to disguise the origin of the plagiarized program.
